--- a/VsIntegration/packages.config
+++ b/VsIntegration/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MSBuildTasks" version="1.4.0.88" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.0.3" requireReinstallation="True" />
   <package id="SpecFlow" version="1.9.0" targetFramework="net45" />
   <package id="SpecFlow.CustomPlugin" version="1.9.0" targetFramework="net45" />
