improve "Auto" runner to use VS2013 for SpecRun (merged from v1.9.3)

--- a/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
+++ b/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
@@ -211,6 +211,8 @@
     <Compile Include="EditorCommands\ReSharperCommand.cs" />
     <Compile Include="LanguageService\IdleTaskProcessingQueue.cs" />
     <Compile Include="LanguageService\IGherkinProcessingTask.cs" />
+    <Compile Include="TestRunner\AutoTestRunnerGatewayLoader.cs" />
+    <Compile Include="TestRunner\SpecRunWithVS2013GatewayLoader.cs" />
     <Compile Include="TestRunner\VS2013RunnerGateway.cs" />
     <Compile Include="UI\ContextMenuBuilder.cs" />
     <Compile Include="Generator\VsGeneratorInfoProvider.cs" />
