--- a/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
+++ b/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
@@ -212,8 +212,8 @@
     <Compile Include="LanguageService\IdleTaskProcessingQueue.cs" />
     <Compile Include="LanguageService\IGherkinProcessingTask.cs" />
     <Compile Include="TestRunner\AutoTestRunnerGatewayLoader.cs" />
-    <Compile Include="TestRunner\SpecRunWithVS2013GatewayLoader.cs" />
-    <Compile Include="TestRunner\VS2013RunnerGateway.cs" />
+    <Compile Include="TestRunner\SpecRunWithVsTestExplorerGatewayLoader.cs" />
+    <Compile Include="TestRunner\VsTestExplorerGateway.cs" />
     <Compile Include="UI\ContextMenuBuilder.cs" />
     <Compile Include="Generator\VsGeneratorInfoProvider.cs" />
     <Compile Include="Install\VsBrowserGuidanceNotificationService.cs" />
