--- a/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
+++ b/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
@@ -212,6 +212,7 @@
     <Compile Include="LanguageService\IdleTaskProcessingQueue.cs" />
     <Compile Include="LanguageService\IGherkinProcessingTask.cs" />
     <Compile Include="TestRunner\AutoTestRunnerGatewayLoader.cs" />
+    <Compile Include="TestRunner\SpecRunTestMethodResolver.cs" />
     <Compile Include="TestRunner\SpecRunWithVsTestExplorerGatewayLoader.cs" />
     <Compile Include="TestRunner\VsTestExplorerGateway.cs" />
     <Compile Include="UI\ContextMenuBuilder.cs" />
