--- a/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
+++ b/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
@@ -209,9 +209,11 @@
     <Compile Include="EditorCommands\GherkinEditorContext.cs" />
     <Compile Include="EditorCommands\GherkinTextViewCreationListener.cs" />
     <Compile Include="EditorCommands\ReSharperCommand.cs" />
+    <Compile Include="InstallServicesHelper.cs" />
     <Compile Include="LanguageService\IdleTaskProcessingQueue.cs" />
     <Compile Include="LanguageService\IGherkinProcessingTask.cs" />
     <Compile Include="TestRunner\AutoTestRunnerGatewayLoader.cs" />
+    <Compile Include="TestRunner\SpecRunGatewayLoader.cs" />
     <Compile Include="TestRunner\SpecRunTestMethodResolver.cs" />
     <Compile Include="TestRunner\SpecRunWithVsTestExplorerGatewayLoader.cs" />
     <Compile Include="TestRunner\VsTestExplorerGateway.cs" />
