Ensured that when a step in a scenario outline block goes through the example substitution that any table or multiline text arguments are also used on the substituted step

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ test-results
 Tests/TechTalk.SpecFlow.Specs.Silverlight4.Web/ClientBin/*
 *.stackdump
 packages/*
+*.ncrunchproject
+SpecFlow.VisualStudio.v2.ncrunchsolution
