put generated source.extension.vsixmanifest to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ Tests/TechTalk.SpecFlow.Specs.Silverlight4.Web/ClientBin/*
 packages/*
 *.ncrunchproject
 SpecFlow.VisualStudio.v2.ncrunchsolution
+VsIntegration/source.extension.vsixmanifest
