--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,18 +1,24 @@
 version: 1.0.{build}
+
 branches:
   only:
   - master
-image: Visual Studio 2015
+image: Visual Studio 2017 RC
+
 configuration: Release
+
 environment:
   matrix:
   - SpecFlow_VisualStudioVersion: 2015
   - SpecFlow_VisualStudioVersion: 2013
+  
 before_build:
 - cmd: nuget restore SpecFlow.VisualStudio.%SpecFlow_VisualStudioVersion%.sln
+
 build:
   project: SpecFlow.VisualStudio.%SpecFlow_VisualStudioVersion%.sln
   verbosity: minimal
+  
 artifacts:
 - path: VsIntegration\bin\Release\TechTalk.SpecFlow.VsIntegration.2015.vsix
 - path: VsIntegration\bin\Release\TechTalk.SpecFlow.VsIntegration.2013.vsix
