force MSBuild version

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,9 @@ environment:
 
   
 before_build:
-- cmd: nuget restore SpecFlow.VisualStudio.%SpecFlow_VisualStudioVersion%.sln
+- cmd: >-
+    nuget restore SpecFlow.VisualStudio.%SpecFlow_VisualStudioVersion%.sln
+    set PATH=C:\Program Files (x86)\MSBuild\%VisualStudioVersion%\Bin;%PATH%
 
 build:
   project: SpecFlow.VisualStudio.%SpecFlow_VisualStudioVersion%.sln
