--- a/VsIntegration/packages.config
+++ b/VsIntegration/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="GitVersion.CommandLine" version="3.6.5" targetFramework="net46" developmentDependency="true" />
+  <package id="GitVersionTask" version="3.6.5" targetFramework="net46" developmentDependency="true" />
   <package id="MSBuildTasks" version="1.5.0.214" targetFramework="net46" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="4.0.3" targetFramework="net45" />
   <package id="SpecFlow" version="1.9.0" targetFramework="net45" />
