--- a/ItemTemplates/TechTalk.SpecFlow.VsIntegration.ItemTemplates.csproj
+++ b/ItemTemplates/TechTalk.SpecFlow.VsIntegration.ItemTemplates.csproj
@@ -75,6 +75,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <VSTemplate Include="SpecFlowFeature_English_CSharp\SpecFlowFeature_English_CSharp.vstemplate" />
+    <VSTemplate Include="SpecFlowFeature_German_CSharp\SpecFlowFeature_German_CSharp.vstemplate" />
+    <VSTemplate Include="SpecFlowFeature_French_CSharp\SpecFlowFeature_French_CSharp.vstemplate" />
+    <VSTemplate Include="SpecFlowFeature_Nederlands_CSharp\SpecFlowFeature_Nederlands_CSharp.vstemplate" />
+    <Content Include="SpecFlowFeature_English_VB\SpecFlowFeatureIcon.ico" />
+    <VSTemplate Include="SpecFlowFeature_English_VB\SpecFlowFeature_English_VB.vstemplate" />
+    <Content Include="SpecFlowFeature_French_VB\SpecFlowFeatureIcon.ico" />
+    <VSTemplate Include="SpecFlowFeature_French_VB\SpecFlowFeature_French_VB.vstemplate" />
+    <Content Include="SpecFlowFeature_German_VB\SpecFlowFeatureIcon.ico" />
+    <VSTemplate Include="SpecFlowFeature_German_VB\SpecFlowFeature_German_VB.vstemplate" />
+    <Content Include="SpecFlowFeature_Nederlands_CSharp\SpecFlowFeatureIcon.ico" />
+    <Content Include="SpecFlowFeature_French_CSharp\SpecFlowFeatureIcon.ico" />
+    <Content Include="SpecFlowFeature_German_CSharp\SpecFlowFeatureIcon.ico" />
+    <Content Include="SpecFlowFeature_English_CSharp\SpecFlowFeatureIcon.ico" />
+    <Content Include="SpecFlowFeature_Nederlands_VB\SpecFlowFeatureIcon.ico" />
+    <VSTemplate Include="SpecFlowFeature_Nederlands_VB\SpecFlowFeature_Nederlands_VB.vstemplate" />
     <Content Include="SpecFlowFeature_VB\SpecFlowFeatureIcon.ico" />
     <VSTemplate Include="SpecFlowFeature_VB\SpecFlowFeature_VB.vstemplate" />
     <Content Include="SpecFlowHooks_CSharp\SpecFlowHooks1.cs" />
@@ -118,7 +134,15 @@
     <Content Include="SpecFlowStepDefinition_CSharp\SpecFlowStepDefinitionIcon.ico" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="SpecFlowFeature_English_VB\SpecFlowFeature1.feature" />
+    <None Include="SpecFlowFeature_French_VB\SpecFlowFeature1.feature" />
+    <None Include="SpecFlowFeature_German_VB\SpecFlowFeature1.feature" />
+    <None Include="SpecFlowFeature_Nederlands_CSharp\SpecFlowFeature1.feature" />
+    <None Include="SpecFlowFeature_French_CSharp\SpecFlowFeature1.feature" />
+    <None Include="SpecFlowFeature_German_CSharp\SpecFlowFeature1.feature" />
+    <None Include="SpecFlowFeature_English_CSharp\SpecFlowFeature1.feature" />
     <None Include="SpecFlowFeature_CSharp\SpecFlowFeature1.feature" />
+    <None Include="SpecFlowFeature_Nederlands_VB\SpecFlowFeature1.feature" />
     <None Include="SpecFlowFeature_VB\SpecFlowFeature1.feature" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
